<resources>
    <string name="app_name">My stock portfolio</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="save_company">save company</string>
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="previous_close">Previous close</string>
    <string name="currency">Currency</string>
    <string name="company_overview">Company overview</string>
    <string name="asset_type">Asset type</string>
    <string name="exchange">Exchange</string>
    <string name="country">Country</string>
    <string name="sector">Sector</string>
    <string name="industry">Industry</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="add_company">add company</string>
    <string name="msg_error_get_data">An error occurred while fetching the data:</string>
    <string name="confirm_delete">Are you sure you want to delete this company?</string>
    <string name="delete_record">Delete record</string>
    <string name="add_stocks">Add stocks</string>
    <string name="stock_quote">Stock quote</string>
</resources>